--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -1,3 +1,6 @@
 #projects-content{
 	min-height: calc(100vh - 10rem);
 }
+body#projects footer{
+	position: fixed
+}
